--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   --shadow:0 10px 30px rgba(0,0,0,.6);
   --trans:.22s cubic-bezier(.2,.9,.2,1)
 }
-*{box-sizing:border-box}
+*{box-sizing:border-box;cursor:none} /* hide default cursor */
 html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,Segoe UI,Roboto,Arial;color:var(--text);overflow:hidden}
 body{background:linear-gradient(180deg,#0b0b0d 0%,var(--bg) 100%);display:flex;flex-direction:column;min-height:100vh}
 canvas#bgCanvas{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
@@ -59,21 +59,15 @@ header .actions a:hover{background:var(--accent);transform:translateY(-2px);box-
   border-color:rgba(168,85,247,.65);
   transform:scale(1.02);
 }
-.icon{width:36px;height:36px;border-radius:10px;display:flex;align-items:center;justify-content:center;font-weight:600;color:var(--muted);font-size:14px}
-.input-display{flex:1;min-height:22px;display:flex;align-items:center;gap:6px;flex-wrap:nowrap;overflow:hidden;white-space:nowrap}
+.input-display{flex:1;min-height:22px;display:flex;align-items:center;gap:6px;overflow:hidden;white-space:nowrap}
 .input-placeholder{color:var(--muted);user-select:none}
-.chars{display:inline-flex;gap:2px;align-items:center;overflow:hidden}
-.chars .char{
-  display:inline-block;padding:0 1px;opacity:0;transform:translateY(12px) scale(.8);
-  animation:typing .25s forwards;
-}
+.chars .char{display:inline-block;padding:0 1px;opacity:0;transform:translateY(12px) scale(.8);animation:typing .25s forwards}
 @keyframes typing{to{opacity:1;transform:none}}
-.buttons{display:flex;gap:8px;align-items:center}
 .clear-btn{background:transparent;border:1px solid transparent;padding:6px;border-radius:8px;color:var(--muted);cursor:pointer;transition:all .15s}
 .clear-btn:hover{color:var(--accent);transform:translateY(-1px)}
-.syntax{font-size:12px;color:var(--muted);background:var(--glass-2);padding:8px;border-radius:8px;border:1px solid var(--border);display:flex;flex-direction:column;gap:6px;line-height:1.1;animation:fadeIn .5s ease}
-.syntax code{background:rgba(0,0,0,.18);padding:3px 6px;border-radius:6px;color:var(--text);font-weight:600;font-size:12px;border:1px solid rgba(255,255,255,0.02)}
-.class-list{margin-top:12px;flex:1;overflow-y:auto;padding-right:6px;scrollbar-width:none;-ms-overflow-style:none}
+.syntax{font-size:12px;color:var(--muted);background:var(--glass-2);padding:8px;border-radius:8px;border:1px solid var(--border);line-height:1.1;animation:fadeIn .5s ease}
+.syntax code{background:rgba(0,0,0,.18);padding:3px 6px;border-radius:6px;color:var(--text);font-weight:600;font-size:12px}
+.class-list{margin-top:12px;flex:1;overflow-y:auto;padding-right:6px}
 .class-item{
   padding:10px 12px;border-radius:10px;margin-bottom:6px;display:flex;justify-content:space-between;align-items:center;
   cursor:pointer;transition:all var(--trans);border-left:3px solid transparent;
@@ -81,50 +75,49 @@ header .actions a:hover{background:var(--accent);transform:translateY(-2px);box-
 }
 .class-item:hover{background:linear-gradient(90deg,rgba(255,255,255,0.02),transparent);transform:translateX(6px)}
 .class-item.active{background:linear-gradient(90deg,rgba(124,58,237,.06),transparent);border-left-color:var(--accent);font-weight:700;color:var(--text)}
+.class-item .meta{font-size:12px;color:var(--muted)}
 .content{flex:1;padding:22px;overflow:auto;animation:fadeIn .4s ease}
-.title{display:flex;align-items:center;gap:12px;margin-bottom:12px}
 .title h1{margin:0;color:var(--accent);font-size:20px}
+.title .parent{color:var(--muted);font-weight:400}
 .card{background:linear-gradient(180deg,var(--card),#0b0b0d);padding:16px;border-radius:12px;border:1px solid var(--border);box-shadow:0 6px 20px rgba(0,0,0,.6);margin-bottom:16px;animation:fadeInUp .4s ease}
 table{width:100%;border-collapse:collapse;margin-top:8px;font-size:13px}
 th,td{padding:8px 10px;border-bottom:1px solid rgba(255,255,255,0.02);text-align:left}
 th{color:var(--accent);font-weight:700}
-.small{font-size:13px;color:var(--muted)}
 .footer-note{font-size:12px;color:var(--muted);margin-top:auto;padding-top:12px;text-align:center}
-.watermark{
-  position:fixed;bottom:10px;left:50%;transform:translateX(-50%);
-  font-size:12px;color:var(--muted);opacity:.7;
-  animation:fadeInUp 1s ease;
+.watermark{position:fixed;bottom:10px;left:50%;transform:translateX(-50%);font-size:12px;color:var(--muted);opacity:.7;animation:fadeInUp 1s ease}
+#cursor{
+  position:fixed;top:0;left:0;width:18px;height:18px;
+  border:2px solid var(--accent);border-radius:50%;
+  pointer-events:none;transform:translate(-50%,-50%);
+  transition:transform .1s ease-out;z-index:1000
 }
 @keyframes fadeIn{from{opacity:0}to{opacity:1}}
 @keyframes fadeInUp{from{opacity:0;transform:translateY(8px)}to{opacity:1;transform:none}}
 @keyframes fadeInDown{from{opacity:0;transform:translateY(-8px)}to{opacity:1;transform:none}}
 @keyframes slideInLeft{from{opacity:0;transform:translateX(-20px)}to{opacity:1;transform:none}}
-@media(max-width:980px){.sidebar{width:300px}}
-@media(max-width:720px){.wrapper{flex-direction:column}.sidebar{width:100%;border-right:0;border-radius:0}}
 </style>
 </head>
 <body>
 <canvas id="bgCanvas"></canvas>
+<div id="cursor"></div>
 <header>
   <div class="title">advantage.<span style="color:#fff">wtf</span> — CS2 SDK Viewer</div>
-  <div class="actions">
-    <a href="https://discord.gg/dyq7bNVz5B" target="_blank">Join Discord</a>
-  </div>
+  <div class="actions"><a href="https://discord.gg/dyq7bNVz5B" target="_blank">Join Discord</a></div>
 </header>
 <div class="wrapper">
   <aside class="sidebar">
     <div class="search-area">
-      <div class="search-ui" id="searchUI" tabindex="0" aria-label="Global search">
+      <div class="search-ui" id="searchUI" tabindex="0">
         <div class="input-display" id="inputDisplay">
           <div class="chars" id="chars"><span class="input-placeholder" id="ph">Search: class:Name or offset:health or plain text</span></div>
         </div>
-        <div class="buttons"><button class="clear-btn" id="clearBtn" title="Clear">✕</button></div>
+        <button class="clear-btn" id="clearBtn">✕</button>
       </div>
       <div class="syntax">
         <div><strong style="color:var(--accent)">Search syntax</strong></div>
-        <div class="small"><code>class:&lt;name&gt;</code> — search class names only</div>
-        <div class="small"><code>offset:&lt;name&gt;</code> — search field/offset names only</div>
-        <div class="small"><code>plain text</code> — searches classes & offsets</div>
+        <div><code>class:&lt;name&gt;</code> — class names only</div>
+        <div><code>offset:&lt;name&gt;</code> — field/offset names only</div>
+        <div><code>plain text</code> — classes & offsets</div>
       </div>
     </div>
     <div class="class-list" id="classList"></div>
@@ -138,63 +131,29 @@ th{color:var(--accent);font-weight:700}
 <script>
 const JSON_FILES=["dumped/json/client_dll.json","dumped/json/buttons.json","dumped/json/engine2.json"];
 let allClasses={};
-async function fetchData(){
-  for(const f of JSON_FILES)try{
-    const r=await fetch(f);if(!r.ok)continue;
-    const data=await r.json();const k=Object.keys(data)[0];
-    const c=data[k];if(c&&c.classes)Object.entries(c.classes).forEach(([n,cls])=>allClasses[n]=cls);
-  }catch(e){}
-  renderClassList("")
-}
+async function fetchData(){for(const f of JSON_FILES)try{const r=await fetch(f);if(!r.ok)continue;const data=await r.json();const k=Object.keys(data)[0];const c=data[k];if(c&&c.classes)Object.entries(c.classes).forEach(([n,cls])=>allClasses[n]=cls)}catch(e){}renderClassList("")}
 function parseSearch(s){s=(s||"").trim().toLowerCase();if(!s)ret=["all",""];if(s.startsWith("class:"))return["class",s.slice(6).trim()];if(s.startsWith("offset:"))return["offset",s.slice(7).trim()];return["all",s]}
-function renderClassList(filter){
-  const list=document.getElementById("classList");list.innerHTML="";
-  const [mode,q]=parseSearch(filter);const names=Object.keys(allClasses).sort((a,b)=>a.localeCompare(b));
-  for(const name of names){
-    const cls=allClasses[name];let show=false;const lname=name.toLowerCase();
-    if(mode==="class"){if(!q||lname.includes(q))show=true}
-    else if(mode==="offset"){if(cls.fields){for(const f of Object.keys(cls.fields)){if(f.toLowerCase().includes(q)){show=true;break}}}}
-    else{if(lname.includes(q))show=true;if(!show&&cls.fields){for(const f of Object.keys(cls.fields)){if(f.toLowerCase().includes(q)){show=true;break}}}}
-    if(!show)continue;
-    const el=document.createElement("div");el.className="class-item";
-    el.innerHTML=`<div>${name}</div><div class="meta">${cls.parent?cls.parent:""}</div>`;
-    el.onclick=()=>selectClass(name,el);list.appendChild(el)
-  }
-}
-function selectClass(name,el){
-  document.querySelectorAll(".class-item").forEach(x=>x.classList.remove("active"));
-  el.classList.add("active");const content=document.getElementById("content");content.innerHTML="";
-  const cls=allClasses[name];const card=document.createElement("div");card.className="card";
-  const title=document.createElement("div");title.className="title";title.innerHTML=`<h1>class ${name}${cls.parent? " : "+cls.parent:""}</h1>`;card.appendChild(title);
-  if(cls.fields){const fBox=document.createElement("div");fBox.className="card";fBox.innerHTML="<strong style='color:var(--accent)'>Fields</strong>";const t=document.createElement("table");t.innerHTML="<thead><tr><th>Name</th><th>Type</th><th>Offset</th></tr></thead>";const tb=document.createElement("tbody");for(const [field,info]of Object.entries(cls.fields)){let offset='?';let type='unknown';if(typeof info==="object"){offset=info.offset??'?';type=info.type_name??'unknown'}else offset=info;const tr=document.createElement("tr");tr.innerHTML=`<td>${field}</td><td>${type}</td><td>${offset}</td>`;tb.appendChild(tr)}t.appendChild(tb);fBox.appendChild(t);content.appendChild(fBox)}
-  if(cls.methods){const mBox=document.createElement("div");mBox.className="card";mBox.innerHTML="<strong style='color:var(--accent)'>Methods</strong>";const t=document.createElement("table");t.innerHTML="<thead><tr><th>Name</th><th>Return</th><th>Args</th></tr></thead>";const tb=document.createElement("tbody");for(const [m,info]of Object.entries(cls.methods)){const ret=info.return_type||"void";const args=(info.args||[]).map(a=>`${a.type_name||"?"} ${a.name||""}`).join(", ");const tr=document.createElement("tr");tr.innerHTML=`<td>${m}</td><td>${ret}</td><td>${args}</td>`;tb.appendChild(tr)}t.appendChild(tb);mBox.appendChild(t);content.appendChild(mBox)}
-}
+function renderClassList(filter){const list=document.getElementById("classList");list.innerHTML="";const [mode,q]=parseSearch(filter);const names=Object.keys(allClasses).sort((a,b)=>a.localeCompare(b));for(const name of names){const cls=allClasses[name];let show=false;const lname=name.toLowerCase();if(mode==="class"){if(!q||lname.includes(q))show=true}else if(mode==="offset"){if(cls.fields){for(const f of Object.keys(cls.fields)){if(f.toLowerCase().includes(q)){show=true;break}}}}else{if(lname.includes(q))show=true;if(!show&&cls.fields){for(const f of Object.keys(cls.fields)){if(f.toLowerCase().includes(q)){show=true;break}}}}if(!show)continue;const el=document.createElement("div");el.className="class-item";el.innerHTML=`<div>${name}</div><div class="meta">${cls.parent?cls.parent:""}</div>`;el.onclick=()=>selectClass(name,el);list.appendChild(el)}}
+function selectClass(name,el){document.querySelectorAll(".class-item").forEach(x=>x.classList.remove("active"));el.classList.add("active");const content=document.getElementById("content");content.innerHTML="";const cls=allClasses[name];const card=document.createElement("div");card.className="card";const title=document.createElement("div");title.className="title";title.innerHTML=`<h1>${name}${cls.parent? ' <span class="parent">: '+cls.parent+"</span>":""}</h1>`;card.appendChild(title);if(cls.fields){const fBox=document.createElement("div");fBox.className="card";fBox.innerHTML="<strong style='color:var(--accent)'>Fields</strong>";const t=document.createElement("table");t.innerHTML="<thead><tr><th>Name</th><th>Type</th><th>Offset</th></tr></thead>";const tb=document.createElement("tbody");for(const [field,info]of Object.entries(cls.fields)){let offset='?';let type='unknown';if(typeof info==="object"){offset=info.offset??'?';type=info.type_name??'unknown'}else offset=info;const tr=document.createElement("tr");tr.innerHTML=`<td>${field}</td><td>${type}</td><td>${offset}</td>`;tb.appendChild(tr)}t.appendChild(tb);fBox.appendChild(t);content.appendChild(fBox)}if(cls.methods){const mBox=document.createElement("div");mBox.className="card";mBox.innerHTML="<strong style='color:var(--accent)'>Methods</strong>";const t=document.createElement("table");t.innerHTML="<thead><tr><th>Name</th><th>Return</th><th>Args</th></tr></thead>";const tb=document.createElement("tbody");for(const [m,info]of Object.entries(cls.methods)){const ret=info.return_type||"void";const args=(info.args||[]).map(a=>`${a.type_name||"?"} ${a.name||""}`).join(", ");const tr=document.createElement("tr");tr.innerHTML=`<td>${m}</td><td>${ret}</td><td>${args}</td>`;tb.appendChild(tr)}t.appendChild(tb);mBox.appendChild(t);content.appendChild(mBox)}}
 let query="";const searchUI=document.getElementById("searchUI");const charsWrap=document.getElementById("chars");const ph=document.getElementById("ph");const clearBtn=document.getElementById("clearBtn");let focused=false;
-searchUI.addEventListener("click",()=>{focused=true;searchUI.classList.add("focus");ph.style.display="none"});
-document.addEventListener("click",e=>{if(!searchUI.contains(e.target)){focused=false;searchUI.classList.remove("focus");if(!query)ph.style.display="block"}});
-document.addEventListener("keydown",e=>{
-  if(!focused)return;const k=e.key;
-  if(k.length===1&&!e.ctrlKey&&!e.metaKey){
-    query+=k;appendChar(k);renderClassList(query);e.preventDefault();
-  }else if(k==="Backspace"){
-    if(query.length){query=query.slice(0,-1);removeChar();renderClassList(query)}e.preventDefault()
-  }else if(k==="Enter"){
-    if(document.querySelector(".class-item"))document.querySelector(".class-item").click();e.preventDefault()
-  }else if(k==="Escape"){query="";clearAll();renderClassList(query);e.preventDefault()}
-});
+searchUI.addEventListener("click",()=>{focused=true;ph.style.display="none"});
+document.addEventListener("click",e=>{if(!searchUI.contains(e.target)){focused=false;if(!query)ph.style.display="block"}});
+document.addEventListener("keydown",e=>{if(!focused)return;const k=e.key;if(k.length===1&&!e.ctrlKey&&!e.metaKey){query+=k;appendChar(k);renderClassList(query);e.preventDefault()}else if(k==="Backspace"){if(query.length){query=query.slice(0,-1);removeChar();renderClassList(query)}e.preventDefault()}else if(k==="Enter"){if(document.querySelector(".class-item"))document.querySelector(".class-item").click();e.preventDefault()}else if(k==="Escape"){query="";clearAll();renderClassList(query);e.preventDefault()}});
 function appendChar(ch){ph.style.display="none";const span=document.createElement("span");span.className="char";span.textContent=ch;charsWrap.appendChild(span)}
 function removeChar(){const last=charsWrap.querySelector(".char:last-child");if(last)last.remove();if(!charsWrap.querySelector(".char"))ph.style.display="block"}
-clearBtn.addEventListener("click",()=>{query="";clearAll();renderClassList(query)});
-function clearAll(){charsWrap.innerHTML="";ph.style.display="block"}
+clearBtn.addEventListener("click",()=>{query="";clearAll();renderClassList(query)});function clearAll(){charsWrap.innerHTML="";ph.style.display="block"}
 fetchData();
 
-// Animated background
+// Background particles with lines
 const canvas=document.getElementById("bgCanvas");const ctx=canvas.getContext("2d");
 let w,h;function resize(){w=canvas.width=window.innerWidth;h=canvas.height=window.innerHeight}
 window.addEventListener("resize",resize);resize();
-const dots=Array.from({length:60},()=>({x:Math.random()*w,y:Math.random()*h,r:Math.random()*2+1,dx:(Math.random()-.5)*.6,dy:(Math.random()-.5)*.6}));
-function draw(){ctx.clearRect(0,0,w,h);ctx.fillStyle="rgba(124,58,237,.5)";for(const d of dots){ctx.beginPath();ctx.arc(d.x,d.y,d.r,0,Math.PI*2);ctx.fill();d.x+=d.dx;d.y+=d.dy;if(d.x<0||d.x>w)d.dx*=-1;if(d.y<0||d.y>h)d.dy*=-1}}
-function animate(){draw();requestAnimationFrame(animate)}animate();
+const dots=Array.from({length:70},()=>({x:Math.random()*w,y:Math.random()*h,r:Math.random()*2+1,dx:(Math.random()-.5)*.7,dy:(Math.random()-.5)*.7}));
+function draw(){ctx.clearRect(0,0,w,h);ctx.fillStyle="rgba(168,85,247,.6)";for(const d of dots){ctx.beginPath();ctx.arc(d.x,d.y,d.r,0,Math.PI*2);ctx.fill();d.x+=d.dx;d.y+=d.dy;if(d.x<0||d.x>w)d.dx*=-1;if(d.y<0||d.y>h)d.dy*=-1}ctx.strokeStyle="rgba(124,58,237,.2)";for(let i=0;i<dots.length;i++){for(let j=i+1;j<dots.length;j++){const dx=dots[i].x-dots[j].x;const dy=dots[i].y-dots[j].y;const dist=Math.sqrt(dx*dx+dy*dy);if(dist<120){ctx.beginPath();ctx.moveTo(dots[i].x,dots[i].y);ctx.lineTo(dots[j].x,dots[j].y);ctx.stroke()}}}}
+(function animate(){draw();requestAnimationFrame(animate)})();
+
+// Custom cursor follow
+const cursor=document.getElementById("cursor");let cx=0,cy=0;document.addEventListener("mousemove",e=>{cx=e.clientX;cy=e.clientY;cursor.style.transform=`translate(${cx}px,${cy}px)`});
 </script>
 </body>
 </html>
