--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>advantage.wtf - CS2 SDK Viewer</title>
   <style>
     :root{--bg:#0f0f11;--sidebar:#141416;--card:#1f1f21;--muted:#9aa0a6;--text:#eef0f2;--accent:#a855f7;--accent-2:#7c3aed;--border:#232327;--glass:rgba(255,255,255,0.03);--glass-2:rgba(255,255,255,0.02);--shadow:0 10px 30px rgba(0,0,0,.6);--trans:.22s cubic-bezier(.2,.9,.2,1)}
@@ -10,8 +10,13 @@
     body{background:linear-gradient(180deg,#0b0b0d 0%,var(--bg) 100%);display:flex;flex-direction:column;min-height:100vh}
     canvas#bgCanvas{position:fixed;top:0;left:0;width:100%;height:100%;z-index:-1}
     header{height:64px;display:flex;align-items:center;justify-content:space-between;padding:0 20px;font-weight:700;color:var(--accent);background:linear-gradient(90deg,rgba(168,85,247,.03),transparent);backdrop-filter:blur(6px);border-bottom:1px solid var(--border);position:fixed;left:0;right:0;top:0;z-index:60;animation:fadeInDown .6s ease}
+    header .title{font-size:18px;letter-spacing:.5px}
+    header .actions{display:flex;gap:10px}
+    header .actions a{padding:8px 14px;border-radius:10px;background:var(--accent-2);color:#fff;text-decoration:none;font-size:14px;font-weight:600;transition:all .2s}
+    header .actions a:hover{background:var(--accent);transform:translateY(-2px);box-shadow:0 6px 20px rgba(0,0,0,.4)}
     .wrapper{display:flex;flex:1;padding-top:64px;height:calc(100vh - 64px);gap:20px}
     .sidebar{width:320px;background:linear-gradient(180deg,var(--sidebar),#0f0f10);border-right:1px solid var(--border);padding:14px;border-top-right-radius:12px;border-bottom-right-radius:12px;display:flex;flex-direction:column;transition:width var(--trans);box-shadow:var(--shadow);overflow:hidden;animation:slideInLeft .5s ease}
+    .search-area{display:flex;flex-direction:column;gap:10px}
     .search-ui{position:relative;background:var(--glass);border:1px solid var(--border);padding:10px;border-radius:12px;display:flex;align-items:center;gap:10px;cursor:text;min-height:44px;transition:box-shadow var(--trans),transform .25s}
     .search-ui:focus-within{box-shadow:0 6px 24px rgba(124,58,237,.1);border-color:rgba(168,85,247,.65);transform:scale(1.02)}
     .input-display{flex:1;min-height:22px;display:flex;align-items:center;gap:6px;overflow:hidden;white-space:nowrap}
@@ -21,12 +26,15 @@
     .clear-btn{background:transparent;border:1px solid transparent;padding:6px;border-radius:8px;color:var(--muted);cursor:pointer;transition:all .15s}
     .clear-btn:hover{color:var(--accent);transform:translateY(-1px)}
     .syntax{font-size:12px;color:var(--muted);background:var(--glass-2);padding:8px;border-radius:8px;border:1px solid var(--border);line-height:1.1;animation:fadeIn .5s ease}
+    .syntax code{background:rgba(0,0,0,0.18);padding:3px 6px;border-radius:6px;color:var(--text);font-weight:600;font-size:12px}
     .class-list{margin-top:12px;flex:1;overflow-y:auto;padding-right:6px}
     .class-item{padding:10px 12px;border-radius:10px;margin-bottom:6px;display:flex;justify-content:space-between;align-items:center;cursor:pointer;transition:all var(--trans);border-left:3px solid transparent;animation:fadeInUp .3s ease}
     .class-item:hover{background:linear-gradient(90deg,rgba(255,255,255,0.02),transparent);transform:translateX(6px)}
     .class-item.active{background:linear-gradient(90deg,rgba(124,58,237,.06),transparent);border-left-color:var(--accent);font-weight:700;color:var(--text)}
+    .class-item .meta{font-size:12px;color:var(--muted)}
     .content{flex:1;padding:22px;overflow:auto;animation:fadeIn .4s ease}
     .title h1{margin:0;color:var(--accent);font-size:20px}
+    .title .parent{color:var(--muted);font-weight:400}
     .card{background:linear-gradient(180deg,var(--card),#0b0b0d);padding:16px;border-radius:12px;border:1px solid var(--border);box-shadow:0 6px 20px rgba(0,0,0,.6);margin-bottom:16px;animation:fadeInUp .4s ease}
     table{width:100%;border-collapse:collapse;margin-top:8px;font-size:13px}
     th,td{padding:8px 10px;border-bottom:1px solid rgba(255,255,255,0.02);text-align:left;vertical-align:top}
@@ -35,7 +43,7 @@
     .footer-note{font-size:12px;color:var(--muted);margin-top:auto;padding-top:12px;text-align:center}
     .watermark{position:fixed;bottom:10px;left:50%;transform:translateX(-50%);font-size:12px;color:var(--muted);opacity:.7;animation:fadeInUp 1s ease}
     #cursor{position:fixed;top:0;left:0;width:18px;height:18px;border:2px solid var(--accent);border-radius:50%;pointer-events:none;transform:translate(-50%,-50%);transition:transform .1s ease-out;z-index:1000}
-    .highlight{animation:flash .9s ease; background:rgba(168,85,247,.08);border-left:3px solid rgba(168,85,247,.35)}
+    .highlight{animation:flash .9s ease;background:rgba(168,85,247,.08);border-left:3px solid rgba(168,85,247,.35)}
     @keyframes flash{0%{background:rgba(168,85,247,.18)}100%{background:rgba(168,85,247,.06)}}
     details{margin-top:8px;border-radius:8px;padding:8px;background:rgba(255,255,255,0.01);border:1px solid rgba(255,255,255,0.02)}
     summary{cursor:pointer;font-weight:700;color:var(--muted);outline:none}
@@ -186,13 +194,11 @@
 
     function formatHex(val){
       if(typeof val === "number" && Number.isFinite(val)){
-        // show 0x... (lowercase hex)
-        return "0x" + val.toString(16).padStart(1,"0");
+        return "0x" + val.toString(16).padStart(1,"0").toUpperCase();
       }
-      // if it's numeric string
       if(typeof val === "string" && /^-?\d+$/.test(val)){
         const n = parseInt(val,10);
-        return "0x" + n.toString(16);
+        return "0x" + n.toString(16).toUpperCase();
       }
       return String(val);
     }
