--- a/index.html
+++ b/index.html
@@ -2,55 +2,61 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>advantage.wtf - CS2 SDK Viewer</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>verze — sdk viewer</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=inter:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <canvas id="bgCanvas"></canvas>
-    <div id="cursor"></div>
+  <div class="background">
+    <div class="aurora"></div>
+  </div>
 
-    <header>
-        <div class="title">advantage.<span style="color:#fff">wtf</span> — CS2 SDK Viewer</div>
-        <div class="actions">
-            <a href="https://discord.gg/dyq7bNVz5B" target="_blank">Join Discord</a>
+  <canvas id="bgcanvas"></canvas>
+  <div id="cursor"></div>
+
+  <center>
+    <h1>verze</h1>
+    <div class="subtitle">explore classes, fields, and methods</div>
+  </center>
+
+  <div class="wrapper">
+    <aside class="sidebar">
+      <div class="search-area">
+        <div class="search-ui" id="searchui" tabindex="0">
+          <div class="input-display" id="inputdisplay">
+            <div class="chars" id="chars">
+              <span class="input-placeholder" id="ph">search: class:name or offset:health or plain text</span>
+            </div>
+          </div>
+          <button class="clear-btn" id="clearbtn">✕</button>
         </div>
-    </header>
 
-    <div class="wrapper">
-        <aside class="sidebar">
-            <div class="search-area">
-                <div class="search-ui" id="searchUI" tabindex="0">
-                    <div class="input-display" id="inputDisplay">
-                        <div class="chars" id="chars">
-                            <span class="input-placeholder" id="ph">Search: class:Name or offset:health or plain text</span>
-                        </div>
-                    </div>
-                    <button class="clear-btn" id="clearBtn">✕</button>
-                </div>
-                <div class="syntax">
-                    <div><strong style="color:var(--accent)">Search syntax</strong></div>
-                    <div><code>class:&lt;name&gt;</code> — class names only</div>
-                    <div><code>offset:&lt;name&gt;</code> — field/offset names only</div>
-                    <div><code>plain text</code> — classes & offsets</div>
-                </div>
-            </div>
-            <div class="class-list" id="classList"></div>
-            <div class="footer-note">Select a class to view fields & methods</div>
-        </aside>
+        <div class="syntax">
+          <div><strong style="color:var(--text-accent)">search syntax</strong></div>
+          <div><code>class:&lt;name&gt;</code> — class names only</div>
+          <div><code>offset:&lt;name&gt;</code> — field/offset names only</div>
+          <div><code>plain text</code> — classes & offsets</div>
+        </div>
+      </div>
 
-        <main class="content" id="content">
-            <div class="card small">Select a class from the left or start typing. Matches will auto-open and highlight.
-            </div>
-        </main>
-    </div>
+      <div class="class-list" id="classlist"></div>
+      <div class="footer-note">select a class to view fields & methods</div>
+    </aside>
 
-    <div class="watermark">sdk and website made by c l o u d</div>
+    <section class="content" id="content">
+      <div class="card small">
+        select a class from the left or start typing. matches will auto-open and highlight.
+      </div>
+    </section>
+  </div>
 
-    <script src="js/app.js"></script>
-    <script src="js/misc.js"></script>
+  <footer class="watermark">verze sdk viewer — made by ellii</footer>
+
+  <script src="js/app.js"></script>
+  <script src="js/misc.js"></script>
 </body>
 
 </html>
