--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>verze — sdk viewer</title>
   <link rel="stylesheet" href="css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=inter:wght@300;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -17,10 +17,10 @@
   <canvas id="bgcanvas"></canvas>
   <div id="cursor"></div>
 
-  <center>
-    <h1>verze</h1>
-    <div class="subtitle">explore classes, fields, and methods</div>
-  </center>
+  <header>
+  <h1>verze</h1>
+  <div class="subtitle">explore classes, fields, and methods</div>
+</header>
 
   <div class="wrapper">
     <aside class="sidebar">
